@@ -1,3 +1,8 @@
+2007-09-26  Brian Warner  <warner@lothar.com>
+
+	* buildbot/status/web/baseweb.py (OneBoxPerBuilder.body): fix URL
+	problem with the build links
+
 2007-09-25  Brian Warner  <warner@lothar.com>
 
 	* buildbot/status/web/base.py (HtmlResource.render): fix addSlash
